force-app/main/default/objects/Lead_Conversion_Precheck__mdt/Lead_Conversion_Precheck__mdt.object-meta.xml
<CustomObject>
    <description>Defines lead conversion precheck rules (metadata-driven).</description>
    <label>Lead Conversion Precheck</label>
    <pluralLabel>Lead Conversion Prechecks</pluralLabel>
</CustomObject>