force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <description>API name of the field to check in the condition.</description>
    <inlineHelpText>Usage depends on Requirement Type. Standard rules (MustEqualValue,RequiredWhen etc.): Enter the Field API Name. RelatedRecordExists rules: Enter the SOQL filter criteria (e.g., Name = &apos;Transactional Email&apos; AND PrivacyConsentStatus = &apos;OptIn&apos;).</inlineHelpText>
    <label>Condition Field</label>
    <type>TextArea</type>
</CustomField>