force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>Condition_Operator__c</fullName>
    <description>Operator for condition comparison</description>
    <inlineHelpText>Usage depends on Requirement Type. Standard rules: Select the comparison operator (e.g., ==, &lt;, &gt;). RelatedRecordExists rules: Leave this field blank.</inlineHelpText>
    <label>Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>