force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <description>Value to compare against</description>
    <inlineHelpText>Standard Rules: Enter the exact value the field must match (e.g., &apos;Verified&apos;). RelatedRecordExists: Enter the related Object API Name and its Lookup Field API Name, separated by a dot (e.g., ContactPointTypeConsent.PartyId) to link to the Lead field.</inlineHelpText>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>