force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>Indicates whether this validation rule should be enforced during manual UI conversions, automated system conversions, or both. Used by the Apex framework to filter applicable rules before execution.</description>
    <inlineHelpText>Specifies when this precheck rule evaluates the Lead. Select whether it should trigger only during manual user conversions, only during automated system conversions, or for both.</inlineHelpText>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>