force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Error_Label__c.field-meta.xml
<CustomField>
    <fullName>Error_Label__c</fullName>
    <description>Error label shown in validation messages.</description>
    <inlineHelpText>Enter the exact, user-friendly error message to display if the Lead fails this check. Make it clear and actionable (e.g., &quot;Lead must have an Opt-In status for Transactional SMS&quot;).</inlineHelpText>
    <label>Error Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>