force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Field_Category__c.field-meta.xml
<CustomField>
    <fullName>Field_Category__c</fullName>
    <description>To identify field category.</description>
    <inlineHelpText>Select the logical grouping for this validation rule based on the data it evaluates (e.g., Demographic Information, Consent). This helps keep rules organized and filterable.</inlineHelpText>
    <label>Field Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>