force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API name of the field to check on the target object.</description>
    <inlineHelpText>Enter the exact API Name of the Lead field to evaluate. For standard checks, it is the field being compared. For &apos;RelatedRecordExists&apos;, it must be the lookup field connecting the Lead to the child record (e.g., IndividualId).</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>