force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Target object API name (e.g., Lead).</description>
    <inlineHelpText>The exact API Name of the base object this validation rule evaluates. For Lead Conversion prechecks, this should always be set to &apos;Lead&apos;.</inlineHelpText>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>