force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Optional record type developer name filter.</description>
    <inlineHelpText>Enter the exact Developer Name of the Lead Record Type this rule applies to eg: &apos;Patient&apos;</inlineHelpText>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>