force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <description>Defines how the field should be validated.</description>
    <inlineHelpText>Controls the evaluation logic. Select a standard check to compare values directly on the Lead record, or choose &apos;RelatedRecordExists&apos; to trigger a dynamic SOQL query that verifies a specific child record exists.</inlineHelpText>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>MustBeTrue</fullName>
            </value>
            <value>
                <fullName>RequiredWhen</fullName>
            </value>
            <value>
                <fullName>MustEqualValue</fullName>
            </value>
            <value>
                <fullName>MustNotEqualValue</fullName>
            </value>
            <value>
                <fullName>RelatedRecordExists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>