force-app/main/default/objects/Lead_Conversion_Precheck__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Activation status of the rule.</description>
    <inlineHelpText>Controls whether this validation rule is currently enforced by the Apex engine. Set to &apos;Active&apos; to enable the check during Lead Conversion, or &apos;Inactive&apos; to temporarily bypass it.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>